--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "antd-mobile": "^2.2.8",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,6 +29,9 @@
   ],
   "devDependencies": {
     "babel-plugin-import": "^1.11.0",
-    "react-app-rewired": "^1.6.2"
+    "less": "2.7.3",
+    "less-loader": "^4.1.0",
+    "react-app-rewired": "^1.6.2",
+    "redux-devtools-extension": "^2.13.7"
   }
 }
